"Task 1 set up"

--- a/app/src/main/res/layout/activity_location_picker.xml
+++ b/app/src/main/res/layout/activity_location_picker.xml
@@ -11,10 +11,10 @@
 
     <AutoCompleteTextView
         android:id="@+id/auto_complete"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-
+        android:singleLine="true"
         android:text="Enter your place"/>
 
 </RelativeLayout>
